--- a/beach-portfolio/css/styles.css
+++ b/beach-portfolio/css/styles.css
@@ -8,8 +8,9 @@
 
 body{
   /*hexadecimal*/
-  background-color:#b3ffff;
+  background-color:#6DA5A5;
   margin:0;
+  color:white;
 }
 
 img{
@@ -39,6 +40,43 @@ textarea{
 }
 
 /* class selector */
+.github-info a{
+  text-decoration: none;
+  color:white;
+}
+
+.github-info a:hover{
+  color:darkgrey;
+}
+
+.github-info a:active{
+  color:lightgrey;
+}
+
+.github-img{
+  width:25px;
+}
+
+.github-info{
+  position: relative;
+  top: 18px;
+}
+
+.no-padding{
+  padding:0;
+}
+
+.footer{
+  background-color:black;
+  width:100%;
+  height:60px;
+  margin-top:15px;
+}
+.project-img{
+  box-shadow:2px 2px 10px grey;
+  width:350px;
+  height:250px;
+}
 
 /* multi-element selector*/
 .navbar, .navbar-container, .navbar div{
@@ -76,12 +114,6 @@ textarea{
 
 .center-text{
   text-align:center;
-}
-
-.project-image{
-  box-shadow:3px 3px 8px grey;
-  margin:0 auto;
-  display:block;
 }
 
 .page-video{
