--- a/log-in-page/css/styles.css
+++ b/log-in-page/css/styles.css
@@ -15,3 +15,13 @@ body{
 .disabled{
   opacity:.7;
 }
+
+.log-in-alert{
+  width:300px;
+  position:absolute;
+  top:25px;
+  left:45px;
+  margin:0 auto;
+  z-index:100;
+  box-shadow:3px 3px 10px grey;
+}
